--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -6,17 +6,17 @@
         <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" class="form grid grid-cols-1 bg-white">
           <h2 class="text-black futura-book-bold text-4xl ml-11 mb-6 hidden lg:block">Fale conosco</h2>
           <input id="nome" type="text" placeholder="Nome" formControlName="nome"
-            class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+            class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl" required>
           <div class="grid grid-cols-2 gap-5">
             <input id="telefone" type="tel" placeholder="Telefone" formControlName="telefone"
-              class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+              class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl" required>
             <input id="email" type="email" placeholder="E-mail" formControlName="email"
-              class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+              class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl" required>
           </div>
           <input id="assunto" type="text" placeholder="Assunto" formControlName="assunto"
-            class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+            class="input-control input lg:h-12 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl" required>
           <textarea rows="2" id="mensagem" type="text" placeholder="Mensagem" formControlName="mensagem"
-            class="input-control rounded-2xl lg:px-8 lg:rounded-3xl mb-12 lg:mb-8"></textarea>
+            class="input-control rounded-2xl lg:px-8 lg:rounded-3xl mb-12 lg:mb-8" required></textarea>
           <button type="submit" class="form-button" [disabled]="!contactForm.valid">ENVIAR</button>
         </form>
       </div>
@@ -63,17 +63,17 @@
         <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" class="form grid grid-cols-1 bg-white">
           <h2 class="text-black futura-book-bold text-4xl ml-11 mb-6 hidden lg:block">Fale conosco</h2>
           <input id="nome" type="text" placeholder="Nome" formControlName="nome"
-            class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+            class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl" required>
           <div class="grid grid-cols-2 gap-5">
             <input id="telefone" type="tel" placeholder="Telefone" formControlName="telefone"
-              class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+              class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl" required>
             <input id="email" type="email" placeholder="E-mail" formControlName="email"
-              class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+              class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl" required>
           </div>
           <input id="assunto" type="text" placeholder="Assunto" formControlName="assunto"
-            class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl">
+            class="input-control input lg:h-16 lg:px-8 mb-3 lg:mb-6 rounded-2xl lg:rounded-3xl" required>
           <textarea rows="5" id="mensagem" type="text" placeholder="Mensagem" formControlName="mensagem"
-            class="input-control rounded-2xl lg:px-8 lg:rounded-3xl mb-8 lg:mb-24"></textarea>
+            class="input-control rounded-2xl lg:px-8 lg:rounded-3xl mb-8 lg:mb-24" required></textarea>
           <button type="submit" class="form-button" [disabled]="!contactForm.valid">ENVIAR</button>
         </form>
       </div>
