--- a/src/app/pages/services/components/cards-carousel/cards-carousel.component.html
+++ b/src/app/pages/services/components/cards-carousel/cards-carousel.component.html
@@ -1,13 +1,8 @@
 <div class="container-card max-w-sm rounded overflow-hidden shadow-lg">
-  <div class="crop">
-    <img class="w-full" class="lazy" src="/assets/images/tirulipa.png" alt="Tirullipa">
-  </div>
-  <div class="pr-6 pl-10 py-4 h-36
-   lg:h-44 bg-white">
-    <div class="font-bold text-xs lg:text-sm mb-2">Influencer</div>
-    <div class="font-bold mb-2 futura-book-bold text-base lg:text-xl">Publi Digital</div>
-    <p class="text-gray-700 text-sm lg:text-base">
-      Exagero de Giga Tasty por Tirullipa em suas redes sociais
-    </p>
-  </div>
+  <swiper [pagination]="true" class="mySwiper" [autoplay]="{
+    delay: 2500,
+    disableOnInteraction: false
+  }">
+    <ng-template swiperSlide *ngFor="let item of imagesList; let i = index"><img class="w-full" [attr.src]="item" [attr.alt]="'imagem ' + i + 'do carrossel'"></ng-template>
+  </swiper>
 </div>
