--- a/src/app/pages/services/components/cards-carousel/cards-carousel.component.scss
+++ b/src/app/pages/services/components/cards-carousel/cards-carousel.component.scss
@@ -1,8 +1,50 @@
+
+@import "~swiper/swiper";
+@import "~swiper/components/pagination/pagination";
 @import "/src/app/shared/styles/variables";
+
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+img {
+  width: 100%;
+  height: auto;
+}
 
 .container-card {
   box-shadow: 0px 3px 6px #00000080;
   border-radius: 60px;
+
   @media (min-width: $lg) {
     border-radius: 75px;
   }
@@ -11,6 +53,7 @@
     width: auto;
     height: 230px;
     overflow: hidden;
+
     @media (min-width: $lg) {
       height: 250px;
     }
